Reduced the height of the logos image to ensure proper spacing'

--- a/CSS/queries.css
+++ b/CSS/queries.css
@@ -100,6 +100,10 @@
     justify-content: center;
     margin-top: 3.2rem;
   }
+
+  .logos img {
+    height: 2.4rem;
+  }
 }
 
 /* Spacing system(px): 
